--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>   
     <!-- Main Section -->
     <div class="box">
-      <div><p>About Us</p></div><br>
+      <div id="about">About Us</div>
       <div class="perks">
         <div class="sector1">
             <div>
@@ -57,6 +57,8 @@
         </div>
       </div>
     </div>
+
+    <div class="our_cat">Our Categories</div>
 
     <!-- Category cards -->
     <div class="category">
@@ -101,7 +103,7 @@
       </div>
       <!-- Navigation -->
       <div class="navigation">
-          <h2>Navigation</h2>
+          <h2>Site Map</h2>
         <li><a href="#">Home </a></li>
         <li><a href="#search">Search </a</li>
         <li><a href="#">Explore</a></li>
