--- a/index.html
+++ b/index.html
@@ -12,111 +12,127 @@
     <title>Home</title>
   </head>
   <body>
-    <!-- header seaction -->
-    <div class="container">
-      
-      <div class="navbar">
-        <div class="left-nav">
-          <h1 id="logo">Forent</h1>
-        </div>
+    <div id="home">
+      <!-- header seaction -->
+      <section class="header">
+        
+        <div class="navbar">
+          <div class="left-nav">
+            <h1 id="logo">Forent</h1>
+          </div>
 
-        <div class="center-nav">
-          <form method="get">
-            <input type="text" id="search" placeholder="search">
-          </form>
-        </div>
+          <div class="center-nav">
+            <form method="get">
+              <input type="text" id="search" placeholder="search">
+            </form>
+          </div>
 
-        <div class="right-nav">
-          <button class="button">Login</button>
-          <button class="button">Explore</button>
-          <button class="button">Rent</button>
+          <div class="right-nav">
+            <button class="button">Login</button>
+            <button class="button">Explore</button>
+            <button class="button">Rent</button>
+          </div>
+        </div>
+      </section>   
+      <!-- Main Section -->
+      <div class="box">
+        <div id="about">About Us</div>
+        <div class="perks">
+          <div class="sector1">
+              <div>
+                  <img id="img" src="icons/Group 27.png" alt="cart" />
+                  <p>Rent Out Anything You Want</p>
+              </div>
+              <div>
+                  <img id="img" src="icons/Group 29.png" alt="voucher"/>
+                  <p>No worries about items getting lost</p>
+              </div>
+              <div>
+                  <img id="img" src="icons/Group 30.png" alt="card" />
+                  <p>Online Payments only</p>
+              </div>
+          </div>
+          <div class="sector2">
+              <img src="icons/Group 31.png" alt="clock" />
+              <button class="btn yellow_color" type="submit">Know more</button>
+          </div>
         </div>
       </div>
-    </div>   
-    <!-- Main Section -->
-    <div class="box">
-      <div id="about">About Us</div>
-      <div class="perks">
-        <div class="sector1">
-            <div>
-                <img id="img" src="icons/Group 27.png" alt="cart" />
-                <p>Rent Out Anything You Want</p>
-            </div>
-            <div>
-                <img id="img" src="icons/Group 29.png" alt="voucher"/>
-                <p>No worries about items getting lost</p>
-            </div>
-            <div>
-                <img id="img" src="icons/Group 30.png" alt="card" />
-                <p>Online Payments only</p>
-            </div>
-        </div>
-        <div class="sector2">
-            <img src="icons/Group 31.png" alt="clock" />
+
+      <div class="our_cat">Our Categories</div>
+
+      <!-- Category cards -->
+      <div class="category">
+        <div class="flex-box">
+          <h2>Electronics</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
             <button class="btn" type="submit">Know more</button>
+          </div>
+        </div>
+        <div class="flex-box">
+          <h2>Clothing</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
+            <button class="btn" type="submit">Know more</button>
+          </div>        
+        </div>
+        <div class="flex-box">
+          <h2>Gaming</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
+            <button class="btn" type="submit">Know more</button>
+          </div>
+        </div>
+        <div class="flex-box">
+          <h2>Furniture</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
+            <button class="btn" type="submit">Know more</button>
+          </div>
+        </div>
+        <div class="flex-box">
+          <h2>Laptop</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
+            <button class="btn" type="submit">Know more</button>
+          </div>
+        </div>
+        <div class="flex-box">
+          <h2>Grooming</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="btn_div">
+            <button class="btn" type="submit">Know more</button>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="our_cat">Our Categories</div>
-
-    <!-- Category cards -->
-    <div class="category">
-      <div class="flex-box">
-        <h2>Electronics</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-      <div class="flex-box">
-        <h2>Clothing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-      <div class="flex-box">
-        <h2>Gaming</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-      <div class="flex-box">
-        <h2>Furniture</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-      <div class="flex-box">
-        <h2>Laptop</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-      <div class="flex-box">
-        <h2>Grooming</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="btn" type="submit">Know more</button>
-      </div>
-    </div>
-
-    <!-- Footer section -->
-    <div class="footer">
-      <!-- Frontem -->
-      <div class="forent">
-        <h3>Forent</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      </div>
-      <!-- Navigation -->
-      <div class="navigation">
-          <h2>Site Map</h2>
-        <li><a href="#">Home </a></li>
-        <li><a href="#search">Search </a</li>
-        <li><a href="#">Explore</a></li>
-        <li><a href="#">Login/Signup </a></li>
-      </div>
-      <!-- Socials -->
-      <div class="socials">
-          <h2>Socials</h2>
-        <li><a href="#">Instagram </a></li>
-        <li><a href="#">Facebook </a</li>
-        <li><a href="#">Twitter </a></li>
-        <li><a href="#">LinkedIn </a></li>
-      </div>
+      <!-- Footer section -->
+      <footer>
+        <div class="footer_content">
+          <!-- Frontem -->
+          <div class="forent">
+            <h2>Forent</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <!-- Navigation -->
+          <div class="sitemap">
+              <h2>Site Map</h2>
+            <li><a href="#home">Home </a></li>
+            <li><a href="#search">Search </a</li>
+            <li><a href="#">Explore</a></li>
+            <li><a href="#">Login/Signup </a></li>
+          </div>
+          <!-- Socials -->
+          <div class="socials">
+              <h2>Socials</h2>
+            <li><a href="#">Instagram </a></li>
+            <li><a href="#">Facebook </a</li>
+            <li><a href="#">Twitter </a></li>
+            <li><a href="#">LinkedIn </a></li>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
