--- a/index.html
+++ b/index.html
@@ -1,138 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <title>Home</title>
-  </head>
-  <body>
-    <div id="home">
-      <!-- header seaction -->
-      <section class="header">
-        
-        <div class="navbar">
-          <div class="left-nav">
-            <h1 id="logo">Forent</h1>
-          </div>
+</head>
 
-          <div class="center-nav">
-            <form method="get">
-              <input type="text" id="search" placeholder="search">
-            </form>
-          </div>
+<body>
+    <header>
+        <nav>
+            <h1 class="forent">Forent</h1>
+            <input type="text" placeholder="search" name="search">
+            <button>Login</button>
+            <button>Explore</button>
+            <button>Rent</button>
+        </nav>
+        <section class="header-section">
+            <h1>About Us</h1>
+            <div class="header-container">
+                <div class="header-left">
+                    <div class="item">
+                        <img id="small-img" src="icons/Group 27.png" alt="cart" />
+                        <p>Rent Out Anything You Want</p>
+                    </div>
+                    <div class="item">
+                        <img id="small-img" src="icons/Group 29.png" alt="voucher"/>
+                        <p>No worries about items getting lost</p>
+                    </div>
+                    <div class="item">
+                        <img id="small-img" src="icons/Group 30.png" alt="card" />
+                        <p>Online Payments only</p>
+                    </div>
+                </div>
+                <div class="header-right">
+                    <img id="big-img" src="icons/Group 31.png" alt="clock" />
+                    <button class="big-btn" type="submit">Know more</button>
+                </div>
+            </div>
+        </section>
+    </header>
 
-          <div class="right-nav">
-            <button class="button">Login</button>
-            <button class="button">Explore</button>
-            <button class="button">Rent</button>
-          </div>
+    <section class="categories-section">
+        <h2>Our Categories</h2>
+        <div class="cards-container">
+            <div class="card">
+                <h3>Electronics</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
+            <div class="card">
+                <h3>Steaming</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
+            <div class="card">
+                <h3>Gaming</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
+            <div class="card">
+                <h3>Clothing</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
+            <div class="card">
+                <h3>Movies</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
+            <div class="card">
+                <h3>Music</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iste cumque quod commodi nostrum eaque, sunt dicta a delectus, soluta dignissimos distinctio consequatur minima, impedit sapiente nam nesciunt dolorum in.</p>
+                <button type="submit">Know More</button>
+            </div>
         </div>
-      </section>   
-      <!-- Main Section -->
-      <div class="box">
-        <div id="about">About Us</div>
-        <div class="perks">
-          <div class="sector1">
-              <div>
-                  <img id="img" src="icons/Group 27.png" alt="cart" />
-                  <p>Rent Out Anything You Want</p>
-              </div>
-              <div>
-                  <img id="img" src="icons/Group 29.png" alt="voucher"/>
-                  <p>No worries about items getting lost</p>
-              </div>
-              <div>
-                  <img id="img" src="icons/Group 30.png" alt="card" />
-                  <p>Online Payments only</p>
-              </div>
-          </div>
-          <div class="sector2">
-              <img src="icons/Group 31.png" alt="clock" />
-              <button class="btn yellow_color" type="submit">Know more</button>
-          </div>
-        </div>
-      </div>
+    </section>
 
-      <div class="our_cat">Our Categories</div>
-
-      <!-- Category cards -->
-      <div class="category">
-        <div class="flex-box">
-          <h2>Electronics</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>
+    <footer>
+        <div style="width: 50%">
+            <h2 class="forent">Forent</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus quo cupiditate officia explicabo delectus, illum, saepe ex a minus earum nisi inventore fugit temporibus ratione. Ad vel iure praesentium blanditiis?</p>
         </div>
-        <div class="flex-box">
-          <h2>Clothing</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>        
+        <div>
+            <h2>Site Map</h2>
+            <a href="#">Home</a>
+            <a href="#">Search</a>
+            <a href="#">Explore</a>
+            <a href="#">login/signup</a>
         </div>
-        <div class="flex-box">
-          <h2>Gaming</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>
+        <div>
+            <h2>Socials</h2>
+            <a href="#"><img src="icons/instagram.svg"/> Instagram</a>
+            <a href="#"><img src="icons/facebook.svg"/> Facebook</a>
+            <a href="#"><img src="icons/linkedin.svg"/> LinkedIn</a>
+            <a href="#"><img src="icons/twitter.svg"/> Twitter</a>
         </div>
-        <div class="flex-box">
-          <h2>Furniture</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>
-        </div>
-        <div class="flex-box">
-          <h2>Laptop</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>
-        </div>
-        <div class="flex-box">
-          <h2>Grooming</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <div class="btn_div">
-            <button class="btn" type="submit">Know more</button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Footer section -->
-      <footer>
-        <div class="footer_content">
-          <!-- Frontem -->
-          <div class="forent">
-            <h2>Forent</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <!-- Navigation -->
-          <div class="sitemap">
-              <h2>Site Map</h2>
-            <li><a href="#home">Home </a></li>
-            <li><a href="#search">Search </a</li>
-            <li><a href="#">Explore</a></li>
-            <li><a href="#">Login/Signup </a></li>
-          </div>
-          <!-- Socials -->
-          <div class="socials">
-              <h2>Socials</h2>
-            <li><a href="#">Instagram </a></li>
-            <li><a href="#">Facebook </a</li>
-            <li><a href="#">Twitter </a></li>
-            <li><a href="#">LinkedIn </a></li>
-          </div>
-        </div>
-      </footer>
-    </div>
-  </body>
+    </footer>
+</body>
 </html>
